# ChangeLog for app-editors/mg
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mg-20110905 (25 Aug 2012)

  25 Aug 2012; Ulrich Müller <ulm@gentoo.org> +mg-20110905.ebuild,
  +metadata.xml:
  Copied from Portage tree.
