@@ -2,23 +2,23 @@
 Hash: SHA256
 
 DIST mg-20110905.tar.gz 138805 SHA256 1cd37d7e6a3eecc890a5718c38b8f38495057ba93856762a756ccee2f9618229 SHA512 b490a5a3526d35839353e138f33ac924c5afbbf7e5c9faa20ceccb82e1dc1e6a3f0726b32bac7d43dcf8a410b1b8525067da5557cf669c52a9e32d1d2f45a8a4 WHIRLPOOL 64dd179462a8c9e53946c756a4975ffd2e5bf1758a300fa699032542a6e2470f9ed03f9fe1a88ac441cf17ac20c2575f9b6c5c1c396c5a7915564fbedfb1c854
-EBUILD mg-20110905.ebuild 901 SHA256 e1acfb73ae0c4fb39a276c2761282601bbad7401ecf503c026f4f88ddfc8ac5d SHA512 b956fa74296418ab6924c3b527804bc6cb12cc12d13943204d0ff8df32120a9f6f54920683da55263a9e19109c235502dd19067ebfa6c1e074e006ff844789a0 WHIRLPOOL 939cc8eef5e6a7e718bd0fa2b2963ba36a946f3a2137334930dfcbd447edc550351955437852f714bd16d398b35a1f9133c6c931caf2b6cd09c9394db65ad9f7
-MISC ChangeLog 257 SHA256 fa26dc04d0cee4d21ef8312c70d8e92ec604357bdd484ae3ff8e1989875c9921 SHA512 7167e796f9a35d9251bc2014ab9bf88eac5019a09a2b7991a3f85a64f9c115046b2494d55fc17a4c70d6bbc6dd790ad90c780e237a998bcff785c491e6ac07cb WHIRLPOOL f1f8cdbf4e39efda10cb9615b2a24b0b511a8f0672038a604cf0ffc486eeb842cb1a1d5b6809539f5d67a4aec8b97bdbcb04c8ab7018b170b4b9a8d3a5e40254
+EBUILD mg-20110905.ebuild 1037 SHA256 686494855e0cacfbee6fa67a7d8c6fd16e9f473cfdd28d7d19a0cd48e2d88c41 SHA512 8114e283aa444364e92fb86f65ad2120a04b87c873ebae3b5d870035c4dba8179eb08ec72a97596e743b283c30cf74792eda4be8654b0869e23efbc3452ba068 WHIRLPOOL 029431248a4006be865aaf24e4675302a3fc7eddcb065fe60bac48a812f7fa13f7df588472c1ad85fd137666ee0dc1468bf3be42c317c1e3222d26c2dff534ed
+MISC ChangeLog 361 SHA256 84b0f3225fbdf2b4192ee67c076b9fb7e54c93c7aaa4ce66a8cd01373d4fdd57 SHA512 8909bc4ba6d967bc77330350d7af5ecee2f84350ce5e5cad1f3750b3886157e10dc9bc61ee9bda93e5b4ef5fb99f4054d382e01b53f7b728e5d07f4450fb313b WHIRLPOOL 94f7f5c099d01ed15447c18bfaaa9d696698313595dfd72bcab41c10df2a3c557339d57615edd9cd6ca2abc9628acf08c0a6f4adab15c660100f11bcb4326d69
 MISC metadata.xml 291 SHA256 65d24d4c0b435503345283db1c00cc7161174eddecc4d737cbf50d924145ca6c SHA512 2ba87a6af0cc36ed2e49ded86f81a6e30b2b9ca9e73949860db9f30bac95ad7374fe1e0c5e712f3c427a8a562ceb57c9693aea967f7c134d5858aca4ec704ba2 WHIRLPOOL 604f60f36640570753ef76af4f260e3103dc8cdfbb8dc00d585d864a6ce8fc3f573a95340720d00c9ebfccc817c13065419090aad6c281a96106b423bd88bd38
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQOJlpAAoJEDxpGckxwJCBbEkP/AyGhoDpxuuj+CIr0p2asLvf
-jPaJ/EO8PZW2k92RRV4Cyl3Xmd6DEgjsX+GIL9R+NyYodaCMocOK77BID3SKjzSs
-23nh2KoFSL2VZoT45rCkc3/dH/2RZVMu0kyLAOpsXaVcilg5VvIsIzLpaQw+2Flh
-EM2ecr3aYDMFecrr7GgqChKJb2fP3YglMz6p980YfhXDouQYUwuLGqsh9lOTA+ld
-OWDwHCA6n0D5f9Aex+vnJ2VndVBaYmcjR8Mbl6VarKUxMMG5dXdlKtuX4oEXkxBy
-xlLeE+88kS0IaUI4C6aB6t3wHhRXKfw2bb9/D2N9xql5YJ3LsY35eZMn0wx77LC7
-3rq9E+DqwQzPLuW0lrmfSpOD1/R0f7T+NdqhK8D8jWodJf2VjC3NHi/SVSvU7RPB
-WTo3v23ichJ+Ljqc7ZhbvhFp2BJBYEKzW/BGU/onyif7d1vyWg8bO3xYSEra+muB
-b75JzhHjHot4VDeqBalQLnL9bU0qOpvLhD5pzfv7XTHZhvWkbLFYsFMw695KlHXU
-v1NoxvoTKZJ0m7Bs8l1hvuKsCZcHBDg5X0hfYX6rjuOM8Dj/HLdkGHDyPP6DZkzg
-o1HH0IXtlpzWnIGg7SHJtRKChahNg2hYzgRDeMnaenM97mToi2dQoKBHBwnHTBcp
-Lbs5BB+M9YKFtJr65Cqi
-=wn/G
+iQIcBAEBCAAGBQJQOJn2AAoJEDxpGckxwJCBHFkQAK88zVOgTvswlmPQRHuQPj5r
+w/P/4a7sUmnGni5Cc088nfFIkH2q/7WfbWkF7kLNdXPJFnuveK+tDUOaZusSKgIQ
+YgjZHbIUrRvTLRlH+BbJa/4bgdDCEPOtrpGXvOAa5b9FnrDsQyxu7NC9jeNLSKyG
+zStAa/qsyW1i7J91yguHaUl8G1AKx9roY2f63jg5w+wnwPp6d8EwcJlfR99mrx3x
+RHQKMHpcErrvRxfbDNyiZYvJ48suxjNqVmg937RIo/RlskMtSJQZp4/DfoymW0yL
+M3O9kSJZBWYXrLImDP4H9HM5Hmy2KW3u7XdTXq5LTeg2LMHJolZ7a5M640Fu5A0l
+sIi92A0pBOaQXo3IUTJgvN7BmeTEghizGMm5trxcrhO48r8pLkglEYDnGpCazFLw
+TI71+d73XQRQxNzql+GUHKw3hFYFzyToxDAML0EqqliNDQyNWHwZNW7jh7koywNJ
+CxYTDOd31Bf8WCgfs4eBkgk8VJlu8edw0eBNQlkblWWncfchulm8Fqt2FsMXHu8L
+HWr++bvrkjysjrWQF+7oYyCZJRuie2EaNHIqq2yNw2XmvqVeB5HIKOEyjkEEb4xE
+2lCmgdPXWkdlRNC2T+M9J9dQA30dHkRMS2Fla8Hwj9fPg8j4ILe5rRJRqDbss5WJ
+8fwSrNBHopGWMDZ5C+ZM
+=8Y02
 -----END PGP SIGNATURE-----
