@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Aug 2012; Ulrich Müller <ulm@gentoo.org> mg-20110905.ebuild:
+  Remove OpenBSD specific commands.
+
 *mg-20110905 (25 Aug 2012)
 
   25 Aug 2012; Ulrich Müller <ulm@gentoo.org> +mg-20110905.ebuild,
